css/main.css
* {
    box-sizing: border-box;
    text-decoration: none;
}

ul {
    list-style: none;
}

@font-face {
    font-family: Oswald;
	src: url(../static/Oswald.ttf); 
}

:root {
    --neon-red: #f34a4a;
    --dark: #262f34;
    --brown: #615049;
    --crep: #f1d3bc;
}

html {
    scroll-behavior: smooth;
    font-family: "Oswald", serif;
    font-size: 16px;
    color: white;
}

.container {
    max-width: 1280px;
    margin: 0 auto;
    padding: 0 15px;
}


/*********************************************************
                        Welcome page
________________________________________________________*/

.welcome {
    display: flex;
    width: 100%;
    min-height: 750px;
    background-image: url(../static/mac2.jpg);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    margin-bottom: 0;
    padding-bottom: 0;
}

.welcome-text {
    display: flex;
    margin: auto;
    flex-direction: column;
    align-items: center;
    font-size: 24px;
}

.welcome-text span.hello {
    line-height: 100px;
}

.welcome-text span.prof {
    font-size: 50px;
    letter-spacing: 2px;
}

.hello,
.hello-mobile,
.hello2-mobile {
    transform: translate(0, -100px);
    opacity: 0;
    transition: all 0.8s;
}

.hello._active,
.hello-mobile._active,
.hello2-mobile._active {
    transform: translate(0, 0);
    opacity: 1;
}

.prof,
.prof-mobile,
.prof2-mobile {
    transform: translate(0, 100px);
    opacity: 0;
    transition: all 0.8s;
}

.prof._active,
.prof-mobile._active,
.prof2-mobile._active {
    transform: translate(0, 0);
    opacity: 1;
}

.hello-mobile,
.hello2-mobile,
.prof-mobile,
.prof2-mobile {
    display: none;
}

/*********************************************************
                        Header nav
________________________________________________________*/

.header {
    background-color: var(--brown);
    width: 100%;
    height: 65px;
    margin-top: 0;
    padding-top: 0;
    overflow: hidden;
}


.header__nav {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    height: 30px; 
}

.logo {
    display: flex;
    position: absolute;
    margin-left: 15px;
    width: 40px;
    height: 30px;
    background-image: url('../static/laptop.svg');
    background-repeat: no-repeat;
    transform: scale(1.5);
}

.header__nav li {
    position: relative;
    padding-left: 15px;
    margin-right: 20px;
}

.header__nav li a {
    color: var(--crep)
}

.header__nav li a:hover,
.header__nav li a:active {
    color: var(--neon-red)
}

.header__nav li:last-child {
    margin-right: 0;
}

.header__nav li::before {
    position: absolute;
    content: "";
    width: 15px;
    height: 15px;
    top: 1px;
    left: 0;
    background-image: url(../static/blogger-logotype.svg);
    background-repeat: no-repeat;
    background-size: contain;
}

.header__nav li:nth-child(2)::before {
    background-image: url(../static/info.svg);
}

.header__nav li:nth-child(3)::before {
    background-image: url(../static/portfolio.svg);
}

.header__nav li:nth-child(4)::before {
    background-image: url(../static/star.svg);
}

.header__nav li:nth-child(5)::before {
    background-image: url(../static/contact.svg);
}

.header-fixed {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 100;
}


/*******************************************************
                      About me
_______________________________________________________*/

.about-me {
    width: 100%;
    min-height: 500px;
    background-color: var(--dark);
    padding-top: 40px;
}

.about-me__content {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.block-title {
    display: inline-block;
    font-size: 30px;
    line-height: 50px;
}

.line {
    display: inline-block;
    width: 50px;
    height: 20px;
    border-bottom: 2px solid rgba(255, 255, 255, 0.3);
    margin-bottom: 30px;
}

.about-me__description {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding-bottom: 100px;
}

.about-me img {
    border-radius: 50%;
    box-shadow: 0 0 2px 1px rgb(20, 20, 20);
}

.about-me__photo {
    transform: translate(0, 120%);
    opacity: 0;
    transition: all 0.8s;
}

.about-me__photo._active {
    transform: translate(0, 0);
    opacity: 1;
}

.about-me__text li {
    position: relative;
    padding-left: 10px;
    margin-bottom: 15px;
    transform: translate(120%, 0);
    opacity: 0;
    transition: all 0.8s;
}

.about-me__text li._active {
    transform: translate(0, 0);
    opacity: 1;
}

.about-me__text li:nth-child(2) {
    transition-delay: 0.1s;
}

.about-me__text li:nth-child(3) {
    transition-delay: 0.2s;
}

.about-me__text li:nth-child(4) {
    transition-delay: 0.3s;
}

.about-me__text li:nth-child(5) {
    transition-delay: 0.4s;
}

.about-me__text li:nth-child(6) {
    transition-delay: 0.5s;
}

.about-me__text li:nth-child(7) {
    transition-delay: 0.6s;
}

.about-me__text li:nth-child(8) {
    transition-delay: 0.7s;
}

.about-me__text li:nth-child(9) {
    transition-delay: 0.8s;
}

.about-me__text li:nth-child(10) {
    transition-delay: 0.9s;
}

.about-me__text li:nth-child(11) {
    transition-delay: 1s;
}

.about-me__text li:last-child {
    margin-bottom: 0;
}

.about-me__text li::before {
    position: absolute;
    content: "";
    top: 7px;
    left: -5px;
    width: 5px;
    height: 5px;
    border: 2px solid rgba(255, 255, 255, 0.3);
    border-radius: 50%;
}


/*******************************************************
                      PORTFOLIO
*******************************************************/

.portfolio {
    width: 100%;
    min-height: 500px;
    background-color: var(--crep);
    box-shadow: 0 0 5px 1px rgb(20, 20, 20);
    padding-top: 40px;
    padding-bottom: 80px;
    z-index: 10;
}

.portfolio__content {
    display: flex;
    flex-direction: column;
    align-items: center;
    color: var(--dark);
}

.portfolio__content .line {
    border-color: var(--dark);
    opacity: 0.3;
}

.portfolio__block {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-wrap: wrap;
    width: 100%;
    min-height: 600px;
}

.portfolio__item {
    min-width: 36%;
    min-height: 150px;
    background-color: #fff;
    margin-bottom: 30px;
    background-image: url(../static/head2.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 5px;
    transform: translate(0, 120%);
    opacity: 0;
    transition: all 0.8s;
} 

.portfolio__item._active {
    transform: translate(0, 0);
    opacity: 1;
}


/*******************************************************
                      Skills
_______________________________________________________*/

.skills {
    width: 100%;
    min-height: 500px;
    background-color: var(--dark);
    padding-top: 40px;
    padding-bottom: 100px;
}

.skills__content {
    display: flex;
    flex-direction: column;
    align-items: center;
    color: var(--blue);
}

.skills__content .line {
    border-color: var(--mauve);
}

.skills__content .block-title {
    color: var(--mauve);
}

.skills__block {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-wrap: wrap;
    width: 100%;
    min-height: 600px;
}

.skills__item {

    min-width: 22%;
    min-height: 200px;
    margin-bottom: 30px;
    background-image: url(../static/html5.svg);
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    border-radius: 5px;
    transform: translate(0, 120%);
    opacity: 0;
    transition: all 0.8s;
} 

.skills__item:hover {
    transform: scale(1.1);
}

.skills__item._active {
    transform: translate(0, 0);
    opacity: 1;
}

.css3 {
    background-image: url(../static/css-3.svg);
}

.js {
    background-image: url(../static/js.svg);
}

.python {
    background-image: url(../static/python.svg);
}

.django {
    background-image: url(../static/icons8-django.svg);
}

.linux {
    background-image: url(../static/linux.svg);
}

.ps {
    background-image: url(../static/icons8-adobe-photoshop.svg);
}

.figma {
    background-image: url(../static/icons8-figma.svg);
}

.github {
    background-image: url(../static/icons8-github.svg);
}

.trello {
    background-image: url(../static/icons8-trello.svg);
}

.cplusplus {
    background-image: url(../static/icons8-c++.svg);
}

.vue {
    background-image: url(../static/icons8-vue-js.svg);
}

/*******************************************************
                      Contacts
_______________________________________________________*/

.contacts {
    width: 100%;
    min-height: 100px;
    background-color: var(--crep);
    padding-top: 40px;
    padding-bottom: 40px;
}

.contacts__content {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.contacts__content .line {
    border-color: var(--dark);
    opacity: 0.3;
}

.contacts__content .block-title {
    color: var(--dark);
}

.contacts__block {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    width: 100%;
    min-height: 200px;
}

.contacts__item {
    min-width: 30%;
    min-height: 100px;
    margin-bottom: 30px;
    background-image: url(../static/html5.svg);
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    transform: translate(0, 120%);
    opacity: 0;
    transition: all 0.8s;
} 

.contacts__item._active {
    transform: translate(0, 0);
    opacity: 1;
}

.contacts__item:hover {
    transform: scale(1.1);
}

.contacts__item:last-child {
    border: none;
}

.gmail {
    background-image: url(../static/gmail.svg);
}

.github {
    background-image: url(../static/icons8-github.svg);
}

.tg {
    background-image: url(../static/telegram.svg);
}

/*******************************************************
                      Footer
_______________________________________________________*/

.footer {
    width: 100%;
    min-height: 10px;
    background-color: var(--brown);
    padding-top: 40px;
    padding-bottom: 40px;
}

.footer__content {
    display: flex;
    flex-direction: column;
    align-items: center;
}


/*******************************************************
                      media
_______________________________________________________*/

@media (max-width:992px) {
	.container {
		max-width: 750px;
	}
}
@media (max-width:767px) {
	.container {
		max-width: none;
    }
    
    .about-me__description {
        flex-direction: column;
    }

    .header__nav li:not(:last-child) {
        display: none;
    }

    .skills__item {
        min-width: 40%;
        margin-bottom: 10px;
    }

    .portfolio__block {
        flex-direction: column;
        width: 90%;
    }

    .portfolio__item {
        min-width: 80%;
        min-height: 100px;
    }

    .contacts__block {
        flex-direction: column;
    }

    .icons {
        font-size: 14px;
    }

    .hello,
    .prof {
        display: none;
    }

    .hello2-mobile {
        margin-bottom: 20px;
    }

    .hello-mobile,
    .hello2-mobile,
    .prof-mobile,
    .prof2-mobile {
        display: inline;
    }

    .prof-mobile,
    .prof2-mobile {
        font-size: 52px;
    }

    .about-me__text li {
        transform: translate(0, 120%);
    }
}

